parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPEREQUAL
    BANG
    CATCH
    CIRCUMEQUAL
    CLASS
    ENUM
    FINALLY
    HOOKHOOK
    HOOKHOOKEQUAL
    INTERFACE
    LSHIFTEQUAL
    MINUSEQUAL
    NAMESPACE
    OUT
    OVERRIDE
    PARAMS
    PERCENTEQUAL
    PIPEEQUAL
    PLUSEQUAL
    PRIVATE
    PROTECTED
    PUBLIC
    READONLY
    REF
    RSHIFTEQUAL
    SHORT
    SLASHEQUAL
    STAREQUAL
    STATIC
    STRUCT
    THROW
    TILDE
    TRY
    UINT
    ULONG
    USHORT

Grammar

Rule 0     S' -> program
Rule 1     program -> func_declaration
Rule 2     program -> func_declaration program
Rule 3     type_name -> ID
Rule 4     type_name -> type_name DOT ID
Rule 5     type -> class_type
Rule 6     type -> interface_type
Rule 7     type -> value_type
Rule 8     class_type -> type_name
Rule 9     class_type -> OBJECT
Rule 10    class_type -> STRING
Rule 11    interface_type -> type_name
Rule 12    value_type -> integral_type
Rule 13    value_type -> floating_point_type
Rule 14    value_type -> BOOL
Rule 15    value_type -> VOID
Rule 16    integral_type -> INT
Rule 17    integral_type -> LONG
Rule 18    integral_type -> CHAR
Rule 19    floating_point_type -> FLOAT
Rule 20    floating_point_type -> DOUBLE
Rule 21    floating_point_type -> DECIMAL
Rule 22    func_declaration -> signature block
Rule 23    signature -> type ID LPAREN param_list RPAREN
Rule 24    signature -> type ID LPAREN RPAREN
Rule 25    param_list -> type ID
Rule 26    param_list -> type ID COMMA param_list
Rule 27    statement_list -> statement
Rule 28    statement_list -> statement statement_list
Rule 29    statement -> declaration_statement
Rule 30    statement -> embedded_statement
Rule 31    declaration_statement -> const_declaration SEMI
Rule 32    declaration_statement -> var_declaration SEMI
Rule 33    const_declaration -> CONST type const_declarators
Rule 34    const_declarators -> const_declarator
Rule 35    const_declarators -> const_declarator COMMA const_declarators
Rule 36    const_declarator -> ID EQUAL exp
Rule 37    var_declaration -> type var_declarators
Rule 38    var_declarators -> var_declarator
Rule 39    var_declarators -> var_declarator COMMA var_declarators
Rule 40    var_declarator -> ID
Rule 41    var_declarator -> ID EQUAL exp
Rule 42    embedded_statement -> block
Rule 43    embedded_statement -> empty_statement
Rule 44    embedded_statement -> exp_statement
Rule 45    embedded_statement -> selection_statement
Rule 46    embedded_statement -> iteration_statement
Rule 47    embedded_statement -> jump_statement
Rule 48    block -> LBRACE statement_list RBRACE
Rule 49    block -> LBRACE RBRACE
Rule 50    empty_statement -> SEMI
Rule 51    exp_statement -> statement_exp SEMI
Rule 52    statement_exp -> invocation_exp
Rule 53    statement_exp -> object_creation_exp
Rule 54    statement_exp -> assignment
Rule 55    statement_exp -> post_increment_exp
Rule 56    statement_exp -> post_decrement_exp
Rule 57    statement_exp -> pre_increment_exp
Rule 58    statement_exp -> pre_decrement_exp
Rule 59    object_creation_exp -> NEW type LPAREN RPAREN
Rule 60    object_creation_exp -> NEW type LPAREN RPAREN object_initializer
Rule 61    object_creation_exp -> NEW type LPAREN arg_list RPAREN
Rule 62    object_creation_exp -> NEW type LPAREN arg_list RPAREN object_initializer
Rule 63    object_initializer -> LBRACE RBRACE
Rule 64    object_initializer -> LBRACE member_initializer_list RBRACE
Rule 65    member_initializer_list -> member_initializer
Rule 66    member_initializer_list -> member_initializer COMMA member_initializer_list
Rule 67    member_initializer -> ID EQUAL exp
Rule 68    post_increment_exp -> primary_exp PLUSPLUS
Rule 69    post_decrement_exp -> primary_exp MINUSMINUS
Rule 70    pre_increment_exp -> PLUSPLUS unary_exp
Rule 71    pre_decrement_exp -> MINUSMINUS unary_exp
Rule 72    selection_statement -> if_statement
Rule 73    selection_statement -> switch_statement
Rule 74    if_statement -> IF LPAREN exp RPAREN embedded_statement
Rule 75    if_statement -> IF LPAREN exp RPAREN embedded_statement ELSE embedded_statement
Rule 76    switch_statement -> SWITCH LPAREN exp RPAREN LBRACE switch_body RBRACE
Rule 77    switch_body -> switch_section
Rule 78    switch_body -> switch_section switch_body
Rule 79    switch_section -> switch_label statement_list
Rule 80    switch_section -> switch_label switch_section
Rule 81    switch_label -> CASE pattern COLON
Rule 82    switch_label -> DEFAULT COLON
Rule 83    pattern -> exp
Rule 84    iteration_statement -> while_statement
Rule 85    iteration_statement -> do_statement
Rule 86    iteration_statement -> for_statement
Rule 87    iteration_statement -> foreach_statement
Rule 88    while_statement -> WHILE LPAREN exp RPAREN embedded_statement
Rule 89    do_statement -> DO embedded_statement WHILE LPAREN exp RPAREN SEMI
Rule 90    for_statement -> FOR LPAREN for_initializer SEMI for_condition SEMI for_iterator RPAREN embedded_statement
Rule 91    for_statement -> FOR LPAREN for_initializer SEMI for_condition SEMI RPAREN embedded_statement
Rule 92    for_statement -> FOR LPAREN for_initializer SEMI SEMI for_iterator RPAREN embedded_statement
Rule 93    for_statement -> FOR LPAREN for_initializer SEMI SEMI RPAREN embedded_statement
Rule 94    for_statement -> FOR LPAREN SEMI for_condition SEMI for_iterator RPAREN embedded_statement
Rule 95    for_statement -> FOR LPAREN SEMI for_condition SEMI RPAREN embedded_statement
Rule 96    for_statement -> FOR LPAREN SEMI SEMI for_iterator RPAREN embedded_statement
Rule 97    for_statement -> FOR LPAREN SEMI SEMI RPAREN embedded_statement
Rule 98    for_initializer -> var_declaration
Rule 99    for_initializer -> var_declaration COMMA for_initializer
Rule 100   for_condition -> exp
Rule 101   for_iterator -> statement_exp_list
Rule 102   statement_exp_list -> statement_exp
Rule 103   statement_exp_list -> statement_exp COMMA statement_exp_list
Rule 104   foreach_statement -> FOREACH LPAREN type ID IN exp RPAREN embedded_statement
Rule 105   jump_statement -> break_statement
Rule 106   jump_statement -> continue_statement
Rule 107   jump_statement -> return_statement
Rule 108   break_statement -> BREAK SEMI
Rule 109   continue_statement -> CONTINUE SEMI
Rule 110   return_statement -> RETURN SEMI
Rule 111   return_statement -> RETURN exp SEMI
Rule 112   arg_list -> exp
Rule 113   arg_list -> exp COMMA arg_list
Rule 114   primary_exp -> primary_no_array_creation_exp
Rule 115   primary_no_array_creation_exp -> TRUE
Rule 116   primary_no_array_creation_exp -> FALSE
Rule 117   primary_no_array_creation_exp -> NULL
Rule 118   primary_no_array_creation_exp -> INTNUM
Rule 119   primary_no_array_creation_exp -> HEXADECIMALNUM
Rule 120   primary_no_array_creation_exp -> BINARYNUM
Rule 121   primary_no_array_creation_exp -> FLOATNUM
Rule 122   primary_no_array_creation_exp -> DOUBLENUM
Rule 123   primary_no_array_creation_exp -> DECIMALNUM
Rule 124   primary_no_array_creation_exp -> CHARLITERAL
Rule 125   primary_no_array_creation_exp -> STRINGLITERAL
Rule 126   primary_no_array_creation_exp -> ID
Rule 127   primary_no_array_creation_exp -> LPAREN exp RPAREN
Rule 128   primary_no_array_creation_exp -> primary_exp DOT ID
Rule 129   primary_no_array_creation_exp -> invocation_exp
Rule 130   invocation_exp -> primary_exp LPAREN RPAREN
Rule 131   invocation_exp -> primary_exp LPAREN arg_list RPAREN
Rule 132   primary_no_array_creation_exp -> primary_no_array_creation_exp LSB exp RSB
Rule 133   primary_no_array_creation_exp -> THIS
Rule 134   primary_no_array_creation_exp -> post_increment_exp
Rule 135   primary_no_array_creation_exp -> post_decrement_exp
Rule 136   primary_no_array_creation_exp -> object_creation_exp
Rule 137   primary_no_array_creation_exp -> TYPEOF LPAREN type RPAREN
Rule 138   primary_no_array_creation_exp -> SIZEOF LPAREN value_type RPAREN
Rule 139   primary_no_array_creation_exp -> DEFAULT LPAREN type RPAREN
Rule 140   exp_list -> exp
Rule 141   exp_list -> exp_list COMMA exp
Rule 142   unary_exp -> primary_exp
Rule 143   unary_exp -> pre_increment_exp
Rule 144   unary_exp -> pre_decrement_exp
Rule 145   unary_exp -> LPAREN type RPAREN unary_exp
Rule 146   exp -> non_assignment_exp
Rule 147   exp -> assignment
Rule 148   non_assignment_exp -> conditional_exp
Rule 149   conditional_exp -> conditional_or_exp HOOK exp COLON exp
Rule 150   conditional_exp -> conditional_or_exp
Rule 151   conditional_or_exp -> conditional_or_exp PIPEPIPE conditional_and_exp
Rule 152   conditional_or_exp -> conditional_and_exp
Rule 153   conditional_and_exp -> conditional_and_exp AMPERAMPER inclusive_or_exp
Rule 154   conditional_and_exp -> inclusive_or_exp
Rule 155   inclusive_or_exp -> inclusive_or_exp PIPE exclusive_or_exp
Rule 156   inclusive_or_exp -> exclusive_or_exp
Rule 157   exclusive_or_exp -> exclusive_or_exp CIRCUMFLEX and_exp
Rule 158   exclusive_or_exp -> and_exp
Rule 159   and_exp -> and_exp AMPER equality_exp
Rule 160   and_exp -> equality_exp
Rule 161   equality_exp -> equality_exp EQEQUAL relational_exp
Rule 162   equality_exp -> equality_exp NOTEQUAL relational_exp
Rule 163   equality_exp -> relational_exp
Rule 164   relational_exp -> relational_exp LT shift_exp
Rule 165   relational_exp -> relational_exp GT shift_exp
Rule 166   relational_exp -> relational_exp LEQ shift_exp
Rule 167   relational_exp -> relational_exp GEQ shift_exp
Rule 168   relational_exp -> relational_exp IS type
Rule 169   relational_exp -> shift_exp
Rule 170   shift_exp -> shift_exp LSHIFT additive_exp
Rule 171   shift_exp -> shift_exp RSHIFT additive_exp
Rule 172   shift_exp -> additive_exp
Rule 173   additive_exp -> additive_exp PLUS multiplicative_exp
Rule 174   additive_exp -> additive_exp MINUS multiplicative_exp
Rule 175   additive_exp -> multiplicative_exp
Rule 176   multiplicative_exp -> multiplicative_exp STAR unary_exp
Rule 177   multiplicative_exp -> multiplicative_exp SLASH unary_exp
Rule 178   multiplicative_exp -> multiplicative_exp PERCENT unary_exp
Rule 179   multiplicative_exp -> unary_exp
Rule 180   assignment -> unary_exp EQUAL exp

Terminals, with rules where they appear

AMPER                : 159
AMPERAMPER           : 153
AMPEREQUAL           : 
BANG                 : 
BINARYNUM            : 120
BOOL                 : 14
BREAK                : 108
CASE                 : 81
CATCH                : 
CHAR                 : 18
CHARLITERAL          : 124
CIRCUMEQUAL          : 
CIRCUMFLEX           : 157
CLASS                : 
COLON                : 81 82 149
COMMA                : 26 35 39 66 99 103 113 141
CONST                : 33
CONTINUE             : 109
DECIMAL              : 21
DECIMALNUM           : 123
DEFAULT              : 82 139
DO                   : 89
DOT                  : 4 128
DOUBLE               : 20
DOUBLENUM            : 122
ELSE                 : 75
ENUM                 : 
EQEQUAL              : 161
EQUAL                : 36 41 67 180
FALSE                : 116
FINALLY              : 
FLOAT                : 19
FLOATNUM             : 121
FOR                  : 90 91 92 93 94 95 96 97
FOREACH              : 104
GEQ                  : 167
GT                   : 165
HEXADECIMALNUM       : 119
HOOK                 : 149
HOOKHOOK             : 
HOOKHOOKEQUAL        : 
ID                   : 3 4 23 24 25 26 36 40 41 67 104 126 128
IF                   : 74 75
IN                   : 104
INT                  : 16
INTERFACE            : 
INTNUM               : 118
IS                   : 168
LBRACE               : 48 49 63 64 76
LEQ                  : 166
LONG                 : 17
LPAREN               : 23 24 59 60 61 62 74 75 76 88 89 90 91 92 93 94 95 96 97 104 127 130 131 137 138 139 145
LSB                  : 132
LSHIFT               : 170
LSHIFTEQUAL          : 
LT                   : 164
MINUS                : 174
MINUSEQUAL           : 
MINUSMINUS           : 69 71
NAMESPACE            : 
NEW                  : 59 60 61 62
NOTEQUAL             : 162
NULL                 : 117
OBJECT               : 9
OUT                  : 
OVERRIDE             : 
PARAMS               : 
PERCENT              : 178
PERCENTEQUAL         : 
PIPE                 : 155
PIPEEQUAL            : 
PIPEPIPE             : 151
PLUS                 : 173
PLUSEQUAL            : 
PLUSPLUS             : 68 70
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
RBRACE               : 48 49 63 64 76
READONLY             : 
REF                  : 
RETURN               : 110 111
RPAREN               : 23 24 59 60 61 62 74 75 76 88 89 90 91 92 93 94 95 96 97 104 127 130 131 137 138 139 145
RSB                  : 132
RSHIFT               : 171
RSHIFTEQUAL          : 
SEMI                 : 31 32 50 51 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 108 109 110 111
SHORT                : 
SIZEOF               : 138
SLASH                : 177
SLASHEQUAL           : 
STAR                 : 176
STAREQUAL            : 
STATIC               : 
STRING               : 10
STRINGLITERAL        : 125
STRUCT               : 
SWITCH               : 76
THIS                 : 133
THROW                : 
TILDE                : 
TRUE                 : 115
TRY                  : 
TYPEOF               : 137
UINT                 : 
ULONG                : 
USHORT               : 
VOID                 : 15
WHILE                : 88 89
error                : 

Nonterminals, with rules where they appear

additive_exp         : 170 171 172 173 174
and_exp              : 157 158 159
arg_list             : 61 62 113 131
assignment           : 54 147
block                : 22 42
break_statement      : 105
class_type           : 5
conditional_and_exp  : 151 152 153
conditional_exp      : 148
conditional_or_exp   : 149 150 151
const_declaration    : 31
const_declarator     : 34 35
const_declarators    : 33 35
continue_statement   : 106
declaration_statement : 29
do_statement         : 85
embedded_statement   : 30 74 75 75 88 89 90 91 92 93 94 95 96 97 104
empty_statement      : 43
equality_exp         : 159 160 161 162
exclusive_or_exp     : 155 156 157
exp                  : 36 41 67 74 75 76 83 88 89 100 104 111 112 113 127 132 140 141 149 149 180
exp_list             : 141
exp_statement        : 44
floating_point_type  : 13
for_condition        : 90 91 94 95
for_initializer      : 90 91 92 93 99
for_iterator         : 90 92 94 96
for_statement        : 86
foreach_statement    : 87
func_declaration     : 1 2
if_statement         : 72
inclusive_or_exp     : 153 154 155
integral_type        : 12
interface_type       : 6
invocation_exp       : 52 129
iteration_statement  : 46
jump_statement       : 47
member_initializer   : 65 66
member_initializer_list : 64 66
multiplicative_exp   : 173 174 175 176 177 178
non_assignment_exp   : 146
object_creation_exp  : 53 136
object_initializer   : 60 62
param_list           : 23 26
pattern              : 81
post_decrement_exp   : 56 135
post_increment_exp   : 55 134
pre_decrement_exp    : 58 144
pre_increment_exp    : 57 143
primary_exp          : 68 69 128 130 131 142
primary_no_array_creation_exp : 114 132
program              : 2 0
relational_exp       : 161 162 163 164 165 166 167 168
return_statement     : 107
selection_statement  : 45
shift_exp            : 164 165 166 167 169 170 171
signature            : 22
statement            : 27 28
statement_exp        : 51 102 103
statement_exp_list   : 101 103
statement_list       : 28 48 79
switch_body          : 76 78
switch_label         : 79 80
switch_section       : 77 78 80
switch_statement     : 73
type                 : 23 24 25 26 33 37 59 60 61 62 104 137 139 145 168
type_name            : 4 8 11
unary_exp            : 70 71 145 176 177 178 179 180
value_type           : 7 138
var_declaration      : 32 98 99
var_declarator       : 38 39
var_declarators      : 37 39
while_statement      : 84

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . func_declaration
    (2) program -> . func_declaration program
    (22) func_declaration -> . signature block
    (23) signature -> . type ID LPAREN param_list RPAREN
    (24) signature -> . type ID LPAREN RPAREN
    (5) type -> . class_type
    (6) type -> . interface_type
    (7) type -> . value_type
    (8) class_type -> . type_name
    (9) class_type -> . OBJECT
    (10) class_type -> . STRING
    (11) interface_type -> . type_name
    (12) value_type -> . integral_type
    (13) value_type -> . floating_point_type
    (14) value_type -> . BOOL
    (15) value_type -> . VOID
    (3) type_name -> . ID
    (4) type_name -> . type_name DOT ID
    (16) integral_type -> . INT
    (17) integral_type -> . LONG
    (18) integral_type -> . CHAR
    (19) floating_point_type -> . FLOAT
    (20) floating_point_type -> . DOUBLE
    (21) floating_point_type -> . DECIMAL

    OBJECT          shift and go to state 10
    STRING          shift and go to state 11
    BOOL            shift and go to state 14
    VOID            shift and go to state 15
    ID              shift and go to state 5
    INT             shift and go to state 16
    LONG            shift and go to state 17
    CHAR            shift and go to state 18
    FLOAT           shift and go to state 19
    DOUBLE          shift and go to state 20
    DECIMAL         shift and go to state 21

    program                        shift and go to state 1
    func_declaration               shift and go to state 2
    signature                      shift and go to state 3
    type                           shift and go to state 4
    class_type                     shift and go to state 6
    interface_type                 shift and go to state 7
    value_type                     shift and go to state 8
    type_name                      shift and go to state 9
    integral_type                  shift and go to state 12
    floating_point_type            shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> func_declaration .
    (2) program -> func_declaration . program
    (1) program -> . func_declaration
    (2) program -> . func_declaration program
    (22) func_declaration -> . signature block
    (23) signature -> . type ID LPAREN param_list RPAREN
    (24) signature -> . type ID LPAREN RPAREN
    (5) type -> . class_type
    (6) type -> . interface_type
    (7) type -> . value_type
    (8) class_type -> . type_name
    (9) class_type -> . OBJECT
    (10) class_type -> . STRING
    (11) interface_type -> . type_name
    (12) value_type -> . integral_type
    (13) value_type -> . floating_point_type
    (14) value_type -> . BOOL
    (15) value_type -> . VOID
    (3) type_name -> . ID
    (4) type_name -> . type_name DOT ID
    (16) integral_type -> . INT
    (17) integral_type -> . LONG
    (18) integral_type -> . CHAR
    (19) floating_point_type -> . FLOAT
    (20) floating_point_type -> . DOUBLE
    (21) floating_point_type -> . DECIMAL

    $end            reduce using rule 1 (program -> func_declaration .)
    OBJECT          shift and go to state 10
    STRING          shift and go to state 11
    BOOL            shift and go to state 14
    VOID            shift and go to state 15
    ID              shift and go to state 5
    INT             shift and go to state 16
    LONG            shift and go to state 17
    CHAR            shift and go to state 18
    FLOAT           shift and go to state 19
    DOUBLE          shift and go to state 20
    DECIMAL         shift and go to state 21

    func_declaration               shift and go to state 2
    program                        shift and go to state 22
    signature                      shift and go to state 3
    type                           shift and go to state 4
    class_type                     shift and go to state 6
    interface_type                 shift and go to state 7
    value_type                     shift and go to state 8
    type_name                      shift and go to state 9
    integral_type                  shift and go to state 12
    floating_point_type            shift and go to state 13

state 3

    (22) func_declaration -> signature . block
    (48) block -> . LBRACE statement_list RBRACE
    (49) block -> . LBRACE RBRACE

    LBRACE          shift and go to state 24

    block                          shift and go to state 23

state 4

    (23) signature -> type . ID LPAREN param_list RPAREN
    (24) signature -> type . ID LPAREN RPAREN

    ID              shift and go to state 25


state 5

    (3) type_name -> ID .

    DOT             reduce using rule 3 (type_name -> ID .)
    ID              reduce using rule 3 (type_name -> ID .)
    LPAREN          reduce using rule 3 (type_name -> ID .)
    RPAREN          reduce using rule 3 (type_name -> ID .)
    LT              reduce using rule 3 (type_name -> ID .)
    GT              reduce using rule 3 (type_name -> ID .)
    LEQ             reduce using rule 3 (type_name -> ID .)
    GEQ             reduce using rule 3 (type_name -> ID .)
    IS              reduce using rule 3 (type_name -> ID .)
    EQEQUAL         reduce using rule 3 (type_name -> ID .)
    NOTEQUAL        reduce using rule 3 (type_name -> ID .)
    AMPER           reduce using rule 3 (type_name -> ID .)
    CIRCUMFLEX      reduce using rule 3 (type_name -> ID .)
    PIPE            reduce using rule 3 (type_name -> ID .)
    AMPERAMPER      reduce using rule 3 (type_name -> ID .)
    HOOK            reduce using rule 3 (type_name -> ID .)
    PIPEPIPE        reduce using rule 3 (type_name -> ID .)
    SEMI            reduce using rule 3 (type_name -> ID .)
    COMMA           reduce using rule 3 (type_name -> ID .)
    RSB             reduce using rule 3 (type_name -> ID .)
    COLON           reduce using rule 3 (type_name -> ID .)
    RBRACE          reduce using rule 3 (type_name -> ID .)


state 6

    (5) type -> class_type .

    ID              reduce using rule 5 (type -> class_type .)
    RPAREN          reduce using rule 5 (type -> class_type .)
    LPAREN          reduce using rule 5 (type -> class_type .)
    LT              reduce using rule 5 (type -> class_type .)
    GT              reduce using rule 5 (type -> class_type .)
    LEQ             reduce using rule 5 (type -> class_type .)
    GEQ             reduce using rule 5 (type -> class_type .)
    IS              reduce using rule 5 (type -> class_type .)
    EQEQUAL         reduce using rule 5 (type -> class_type .)
    NOTEQUAL        reduce using rule 5 (type -> class_type .)
    AMPER           reduce using rule 5 (type -> class_type .)
    CIRCUMFLEX      reduce using rule 5 (type -> class_type .)
    PIPE            reduce using rule 5 (type -> class_type .)
    AMPERAMPER      reduce using rule 5 (type -> class_type .)
    HOOK            reduce using rule 5 (type -> class_type .)
    PIPEPIPE        reduce using rule 5 (type -> class_type .)
    SEMI            reduce using rule 5 (type -> class_type .)
    COMMA           reduce using rule 5 (type -> class_type .)
    RSB             reduce using rule 5 (type -> class_type .)
    COLON           reduce using rule 5 (type -> class_type .)
    RBRACE          reduce using rule 5 (type -> class_type .)


state 7

    (6) type -> interface_type .

    ID              reduce using rule 6 (type -> interface_type .)
    RPAREN          reduce using rule 6 (type -> interface_type .)
    LPAREN          reduce using rule 6 (type -> interface_type .)
    LT              reduce using rule 6 (type -> interface_type .)
    GT              reduce using rule 6 (type -> interface_type .)
    LEQ             reduce using rule 6 (type -> interface_type .)
    GEQ             reduce using rule 6 (type -> interface_type .)
    IS              reduce using rule 6 (type -> interface_type .)
    EQEQUAL         reduce using rule 6 (type -> interface_type .)
    NOTEQUAL        reduce using rule 6 (type -> interface_type .)
    AMPER           reduce using rule 6 (type -> interface_type .)
    CIRCUMFLEX      reduce using rule 6 (type -> interface_type .)
    PIPE            reduce using rule 6 (type -> interface_type .)
    AMPERAMPER      reduce using rule 6 (type -> interface_type .)
    HOOK            reduce using rule 6 (type -> interface_type .)
    PIPEPIPE        reduce using rule 6 (type -> interface_type .)
    SEMI            reduce using rule 6 (type -> interface_type .)
    COMMA           reduce using rule 6 (type -> interface_type .)
    RSB             reduce using rule 6 (type -> interface_type .)
    COLON           reduce using rule 6 (type -> interface_type .)
    RBRACE          reduce using rule 6 (type -> interface_type .)


state 8

    (7) type -> value_type .

    ID              reduce using rule 7 (type -> value_type .)
    RPAREN          reduce using rule 7 (type -> value_type .)
    LPAREN          reduce using rule 7 (type -> value_type .)
    LT              reduce using rule 7 (type -> value_type .)
    GT              reduce using rule 7 (type -> value_type .)
    LEQ             reduce using rule 7 (type -> value_type .)
    GEQ             reduce using rule 7 (type -> value_type .)
    IS              reduce using rule 7 (type -> value_type .)
    EQEQUAL         reduce using rule 7 (type -> value_type .)
    NOTEQUAL        reduce using rule 7 (type -> value_type .)
    AMPER           reduce using rule 7 (type -> value_type .)
    CIRCUMFLEX      reduce using rule 7 (type -> value_type .)
    PIPE            reduce using rule 7 (type -> value_type .)
    AMPERAMPER      reduce using rule 7 (type -> value_type .)
    HOOK            reduce using rule 7 (type -> value_type .)
    PIPEPIPE        reduce using rule 7 (type -> value_type .)
    SEMI            reduce using rule 7 (type -> value_type .)
    COMMA           reduce using rule 7 (type -> value_type .)
    RSB             reduce using rule 7 (type -> value_type .)
    COLON           reduce using rule 7 (type -> value_type .)
    RBRACE          reduce using rule 7 (type -> value_type .)


state 9

    (8) class_type -> type_name .
    (11) interface_type -> type_name .
    (4) type_name -> type_name . DOT ID

  ! reduce/reduce conflict for ID resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for RPAREN resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for LPAREN resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for LT resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for GT resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for LEQ resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for GEQ resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for IS resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for EQEQUAL resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for NOTEQUAL resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for AMPER resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for CIRCUMFLEX resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for PIPE resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for AMPERAMPER resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for HOOK resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for PIPEPIPE resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for SEMI resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for COMMA resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for RSB resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for COLON resolved using rule 8 (class_type -> type_name .)
  ! reduce/reduce conflict for RBRACE resolved using rule 8 (class_type -> type_name .)
    ID              reduce using rule 8 (class_type -> type_name .)
    RPAREN          reduce using rule 8 (class_type -> type_name .)
    LPAREN          reduce using rule 8 (class_type -> type_name .)
    LT              reduce using rule 8 (class_type -> type_name .)
    GT              reduce using rule 8 (class_type -> type_name .)
    LEQ             reduce using rule 8 (class_type -> type_name .)
    GEQ             reduce using rule 8 (class_type -> type_name .)
    IS              reduce using rule 8 (class_type -> type_name .)
    EQEQUAL         reduce using rule 8 (class_type -> type_name .)
    NOTEQUAL        reduce using rule 8 (class_type -> type_name .)
    AMPER           reduce using rule 8 (class_type -> type_name .)
    CIRCUMFLEX      reduce using rule 8 (class_type -> type_name .)
    PIPE            reduce using rule 8 (class_type -> type_name .)
    AMPERAMPER      reduce using rule 8 (class_type -> type_name .)
    HOOK            reduce using rule 8 (class_type -> type_name .)
    PIPEPIPE        reduce using rule 8 (class_type -> type_name .)
    SEMI            reduce using rule 8 (class_type -> type_name .)
    COMMA           reduce using rule 8 (class_type -> type_name .)
    RSB             reduce using rule 8 (class_type -> type_name .)
    COLON           reduce using rule 8 (class_type -> type_name .)
    RBRACE          reduce using rule 8 (class_type -> type_name .)
    DOT             shift and go to state 26

  ! ID              [ reduce using rule 11 (interface_type -> type_name .) ]
  ! RPAREN          [ reduce using rule 11 (interface_type -> type_name .) ]
  ! LPAREN          [ reduce using rule 11 (interface_type -> type_name .) ]
  ! LT              [ reduce using rule 11 (interface_type -> type_name .) ]
  ! GT              [ reduce using rule 11 (interface_type -> type_name .) ]
  ! LEQ             [ reduce using rule 11 (interface_type -> type_name .) ]
  ! GEQ             [ reduce using rule 11 (interface_type -> type_name .) ]
  ! IS              [ reduce using rule 11 (interface_type -> type_name .) ]
  ! EQEQUAL         [ reduce using rule 11 (interface_type -> type_name .) ]
  ! NOTEQUAL        [ reduce using rule 11 (interface_type -> type_name .) ]
  ! AMPER           [ reduce using rule 11 (interface_type -> type_name .) ]
  ! CIRCUMFLEX      [ reduce using rule 11 (interface_type -> type_name .) ]
  ! PIPE            [ reduce using rule 11 (interface_type -> type_name .) ]
  ! AMPERAMPER      [ reduce using rule 11 (interface_type -> type_name .) ]
  ! HOOK            [ reduce using rule 11 (interface_type -> type_name .) ]
  ! PIPEPIPE        [ reduce using rule 11 (interface_type -> type_name .) ]
  ! SEMI            [ reduce using rule 11 (interface_type -> type_name .) ]
  ! COMMA           [ reduce using rule 11 (interface_type -> type_name .) ]
  ! RSB             [ reduce using rule 11 (interface_type -> type_name .) ]
  ! COLON           [ reduce using rule 11 (interface_type -> type_name .) ]
  ! RBRACE          [ reduce using rule 11 (interface_type -> type_name .) ]


state 10

    (9) class_type -> OBJECT .

    ID              reduce using rule 9 (class_type -> OBJECT .)
    RPAREN          reduce using rule 9 (class_type -> OBJECT .)
    LPAREN          reduce using rule 9 (class_type -> OBJECT .)
    LT              reduce using rule 9 (class_type -> OBJECT .)
    GT              reduce using rule 9 (class_type -> OBJECT .)
    LEQ             reduce using rule 9 (class_type -> OBJECT .)
    GEQ             reduce using rule 9 (class_type -> OBJECT .)
    IS              reduce using rule 9 (class_type -> OBJECT .)
    EQEQUAL         reduce using rule 9 (class_type -> OBJECT .)
    NOTEQUAL        reduce using rule 9 (class_type -> OBJECT .)
    AMPER           reduce using rule 9 (class_type -> OBJECT .)
    CIRCUMFLEX      reduce using rule 9 (class_type -> OBJECT .)
    PIPE            reduce using rule 9 (class_type -> OBJECT .)
    AMPERAMPER      reduce using rule 9 (class_type -> OBJECT .)
    HOOK            reduce using rule 9 (class_type -> OBJECT .)
    PIPEPIPE        reduce using rule 9 (class_type -> OBJECT .)
    SEMI            reduce using rule 9 (class_type -> OBJECT .)
    COMMA           reduce using rule 9 (class_type -> OBJECT .)
    RSB             reduce using rule 9 (class_type -> OBJECT .)
    COLON           reduce using rule 9 (class_type -> OBJECT .)
    RBRACE          reduce using rule 9 (class_type -> OBJECT .)


state 11

    (10) class_type -> STRING .

    ID              reduce using rule 10 (class_type -> STRING .)
    RPAREN          reduce using rule 10 (class_type -> STRING .)
    LPAREN          reduce using rule 10 (class_type -> STRING .)
    LT              reduce using rule 10 (class_type -> STRING .)
    GT              reduce using rule 10 (class_type -> STRING .)
    LEQ             reduce using rule 10 (class_type -> STRING .)
    GEQ             reduce using rule 10 (class_type -> STRING .)
    IS              reduce using rule 10 (class_type -> STRING .)
    EQEQUAL         reduce using rule 10 (class_type -> STRING .)
    NOTEQUAL        reduce using rule 10 (class_type -> STRING .)
    AMPER           reduce using rule 10 (class_type -> STRING .)
    CIRCUMFLEX      reduce using rule 10 (class_type -> STRING .)
    PIPE            reduce using rule 10 (class_type -> STRING .)
    AMPERAMPER      reduce using rule 10 (class_type -> STRING .)
    HOOK            reduce using rule 10 (class_type -> STRING .)
    PIPEPIPE        reduce using rule 10 (class_type -> STRING .)
    SEMI            reduce using rule 10 (class_type -> STRING .)
    COMMA           reduce using rule 10 (class_type -> STRING .)
    RSB             reduce using rule 10 (class_type -> STRING .)
    COLON           reduce using rule 10 (class_type -> STRING .)
    RBRACE          reduce using rule 10 (class_type -> STRING .)


state 12

    (12) value_type -> integral_type .
